# opensearch_demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  configs.py  main.py  mock_data.json  os_db_manager.py  pyproject.toml
